# SpellChecker

./: CMakeLists.txt  SpellClient.cpp  SpellServer.cpp  spell.thrift
gen-cpp/: CMakeLists.txt  SpellService.cpp  SpellService.h  SpellService_server.skeleton.cpp  spell_constants.cpp  spell_constants.h  spell_types.cpp  spell_types.h
